--- a/test/components/previews/decor/forms/checkbox_preview/in_form.html.erb
+++ b/test/components/previews/decor/forms/checkbox_preview/in_form.html.erb
@@ -1,6 +1,6 @@
 <%= render ::Decor::Forms::Form.new(model: model, url: "#", local: true) do |form_component| %>
   <%= render ::Decor::Forms::LayoutContainer.new do |container| %>
-    <%= render ::Decor::Forms::LayoutSection.new(stacked: stacked_form) do %>
+    <%= render ::Decor::Forms::LayoutSection.new(title: "Checkbox", stacked: stacked_form) do %>
       <%= form_component.builder.check_box :chosen,
                       label: label,
                       description: description,
