--- a/test/components/previews/decor/forms/text_field_preview/in_form.html.erb
+++ b/test/components/previews/decor/forms/text_field_preview/in_form.html.erb
@@ -1,44 +1,23 @@
 <%= render ::Decor::Forms::Form.new(model: model, url: "#", local: true) do |form_component| %>
   <%= render ::Decor::Forms::LayoutContainer.new do |container| %>
-    <%= render ::Decor::Forms::LayoutSection.new(stacked: stacked_form) do %>
-      <%= form_component.builder.text_field :text,
-                       label: label,
-                       description: description,
-                       show_label: show_label,
-                       compact: compact,
-                       required: required,
-                       disabled: disabled,
-                       helper_text: helper_text,
-                       hide_required_asterisk: hide_label_required_asterisk,
+    <%= render ::Decor::Forms::LayoutSection.new(title: "Text", stacked: stacked_form) do %>
+      <%= form_component.builder.text_field :first_name,
+                       label: "First Name",
                        label_position: label_position,
                        grid_span: grid_span,
-                       floating_error_text: floating_error_text,
-                       placeholder: placeholder,
-                       leading_icon_name: leading_icon_name,
-                       trailing_icon_name: trailing_icon_name,
-                       leading_text_add_on: leading_text_add_on,
-                       trailing_text_add_on: trailing_text_add_on,
-                       add_on_style: add_on_style,
-                       type: type,
-                       pattern: pattern,
-                       inputmode: inputmode,
-                       numerical: numerical,
-                       maximum_length: maximum_length,
-                       minimum_length: minimum_length,
-                       validate_value_equal_to_id: validate_value_equal_to_id,
-                       min: min,
-                       max: max,
-                       step: step,
-                       greater_than: greater_than,
-                       less_than: less_than,
-                       validation_messages: {
-                         required: "This is the custom validation message for the required field.",
-                       } %>
-      <%= form_component.builder.password_field :password,
-                           label_position: label_position,
-                           grid_span: grid_span,
-                           maximum_length: maximum_length,
-                           minimum_length: minimum_length %>
+                       required: true %>
+      <%= form_component.builder.text_field :last_name,
+                       label: "Last Name",
+                       label_position: label_position,
+                       grid_span: grid_span,
+                       required: true %>
+      <%= form_component.builder.text_field :email,
+                       label: "Email",
+                       type: :email,
+                       label_position: label_position,
+                       grid_span: :span_full,
+                       required: true,
+                       helper_text: "We'll use this to contact you" %>
     <% end %>
     <% container.with_buttons do %>
       <%= form_component.builder.submit %>
