Fixes and update docs

--- a/test/components/previews/decor/page_section_preview/playground.html.erb
+++ b/test/components/previews/decor/page_section_preview/playground.html.erb
@@ -18,7 +18,7 @@
   <% end %>
   <% if show_cta %>
     <% page.with_cta do %>
-      <%= render ::Decor::Button.new(label: "Add new", variant: :outlined, color: :secondary) %>
+      <%= render ::Decor::Button.new(label: "Add new", style: :outlined, color: :secondary) %>
     <% end %>
   <% end %>
 
