--- a/test/components/previews/decor/modals/modal_close_button_preview/in_modal.html.erb
+++ b/test/components/previews/decor/modals/modal_close_button_preview/in_modal.html.erb
@@ -2,7 +2,7 @@
   initial_content: capture do %>
   <div>
     <div class="mx-auto flex items-center justify-center h-12 w-12 rounded-full bg-green-100">
-      <%= render ::Decor::Icon.new(name: "check", variant: :outline, html_options: {class: "w-6 h-6"}) %>
+      <%= render ::Decor::Icon.new(name: "check", style: :outline, html_options: {class: "w-6 h-6"}) %>
     </div>
     <div class="mt-3 text-center sm:mt-5">
       <h3 class="text-lg leading-6 font-medium text-gray-900" id="modal-title">Payment confirmed?</h3>
@@ -23,7 +23,7 @@
       close_reason: "cancel",
       full_width: true,
       color: :secondary,
-      variant: :outlined,
+      style: :outlined,
       html_options: {class: "sm:mt-0 sm:col-start-1 sm:text-sm"}
     ) %>
   </div>
